2013-01-30 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fixed the menu to showing
	in the link to view agent.
	
	* operation/agentes/estado_monitores.php: cleaned source code style.

2013-01-30 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/planned_downtime.list.php, include/db/oracle.php,
	include/Image/image_functions.php,
	operation/events/events.build_table.php,
	operation/messages/message_edit.php, operation/users/user_edit.php,
	operation/tree.php: improved the source style.
	
	* include/constants.php: added constants for the subtype of modules.

2013-01-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/events/event_responses.editor.php: Little fix
	in a tooltip

2013-01-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed help popups to 
	be used from metaconsole too

	* godmode/events/event_responses.editor.php: Added
	a little help tip in the windows type of event
	responses editor

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/groups/group_list.php, include/ajax/events.php,
	include/functions_api.php: improved the style code.

2013-01-29  Dario Rodriguez <dario@artica.es>

        * images/pandora_report_logo.png: Added new images missed for
	        report cover.

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixed the lost columns in the
	item general and added what "agent-module(op)" is the max and min
	and added in the resume the units.
	
	Fixes: #3602208

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/menu.php, include/db/oracle.php, include/db/mysql.php,
	include/functions_categories.php, include/functions_db.php,
	include/functions_menu.php: improved the code style.

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/reporting_builder.php,
	godmode/agentes/configurar_agente.php, godmode/menu.php,