@@ -1,3 +1,10 @@
+2013-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
+	 extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
+	 extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added 
+	meta_num_elements token to tconfig in pandora db dump.
+
 2013-01-30 Miguel de Dios <miguel.dedios@artica.es>
 
 	* godmode/agentes/modificar_agente.php: fixed the menu to showing
